--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bala_notes",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Open Source Note Taking App",
   "main": "main.js",
   "scripts": {
@@ -10,7 +10,10 @@
   "author": "K Balaji",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "electron": "^12.0.1",
-    "electron-builder": "^22.10.5"
+    "electron-builder": "^22.10.5",
+    "postcss": "^8.2.9",
+    "tailwindcss": "^2.0.4"
   }
 }
