--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "Open Source Note Taking App",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-builder --x64 --ia32"
+    "start": "electron ."
   },
   "author": "K Balaji",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "electron": "^12.0.1",
-    "electron-builder": "^22.10.5",
     "postcss": "^8.2.9",
     "tailwindcss": "^2.0.4"
   }
