--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Open Source Note Taking App",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "buildcss": "tailwindcss build style/styles.css -o style/global.css -c tailwind.config.js"
   },
   "author": "K Balaji",
   "license": "MIT",
