--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Bala Notes",
-  "version": "6.0.0",
+  "name": "bala_notes",
+  "version": "7.0.0",
   "description": "Open Source Note Taking App",
   "main": "main.js",
   "scripts": {
