--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "bala_notes",
   "version": "7.0.0",
   "description": "Open Source Note Taking App",
+  "author": "K Balaji",
+  "license": "MIT",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "buildcss": "tailwindcss build style/styles.css -o style/global.css -c tailwind.config.js"
+    "buildcss": "tailwindcss build style/styles.css -o style/global.css"
   },
-  "author": "K Balaji",
-  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "electron": "^12.0.2",
